@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

package "ui" {
class ColourMapUI{
}
}

package "controllers" {
class ColourMapController{
+ColourMap()
}
}
package utils{
package stores{
class NetworkStore{
+colourMap();
-getDistanceBetweenTwoPoints(lat1,lon1,lat2,lon2)
}
}
package matrix{
class MatrixGraph{
+MatrixGraph(directed,vs,m)
+ColourMap()
}
}
class Printer{
+print()
}
}


ColourMapUI ..> ColourMapController
ColourMapController ..> Printer
ColourMapController ..> MatrixGraph
ColourMapController ..> NetworkStore
NetworkStore "1"->"1" MatrixGraph : creates

@enduml